force-app/main/default/objects/synety__Call_Duration_Queue__c/synety__Call_Duration_Queue__c.object-meta.xml
<CustomObject>
    <label>Call Duration Queue</label>
    <nameField>
        <label>Call Duration Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Duration Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>