force-app/main/default/objects/synety__Call_Duration_Queue__c/fields/synety__Call_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>synety__Call_Session_Id__c</fullName>
    <externalId>true</externalId>
    <label>Call Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>