force-app/main/default/objects/synety__Call_Duration_Queue__c/fields/synety__IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>synety__IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProcessed</label>
    <type>Checkbox</type>
</CustomField>