force-app/main/default/objects/synety__Call_Duration_Queue__c/fields/synety__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>synety__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>