force-app/main/default/objects/synety__Call_Duration_Queue__c/fields/synety__RecordID__c.field-meta.xml
<CustomField>
    <fullName>synety__RecordID__c</fullName>
    <label>RecordID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>