force-app/main/default/objects/synety__Call_Duration_Queue__c/fields/synety__RecordOwner__c.field-meta.xml
<CustomField>
    <fullName>synety__RecordOwner__c</fullName>
    <label>RecordOwner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>